--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.1 (2021-11-16)
+-------------------------------------------------------------------------------
+  * Fix broken packs if any
+
+-------------------------------------------------------------------------------
   Version 0.1.0 (2021-09-12)
 -------------------------------------------------------------------------------
   * Initial release
