--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 0.1.2 (2022-05-13)
+-------------------------------------------------------------------------------
+  * Added nala as option
+  * Colored servers status output
+
+-------------------------------------------------------------------------------
   Version 0.1.1 (2021-11-16)
 -------------------------------------------------------------------------------
   * Fix broken packs if any
