--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 0.1.3 (2022-09-18)
+-------------------------------------------------------------------------------
+  * Added help option
+  * Added spu shortcut
+
+-------------------------------------------------------------------------------
   Version 0.1.2 (2022-05-13)
 -------------------------------------------------------------------------------
   * Added nala as option
