--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.4 (2023-10-21)
+-------------------------------------------------------------------------------
+  * Added full option to nala
+
+-------------------------------------------------------------------------------
   Version 0.1.3 (2022-09-18)
 -------------------------------------------------------------------------------
   * Added help option
